# qt

./: .gitmodules  CMakeLists.txt  README.md  README.txt  bitbucket-pipelines.yml
.github/workflows/: cmake.yml
ZQRes/: CMakeLists.txt  def.def  qml.qrc
ZQml/: CMakeLists.txt  lang_en.ts  lang_ru.ts  main.cpp  qml.qrc  qtquickcontrols2.conf
ZQml/langs/: arabic.ts  brazilian.ts  bulgarian.ts  czech.ts  danish.ts  dutch.ts  english.ts  finnish.ts  french.ts  german.ts  greek.ts  hungarian.ts  italian.ts  japanese.ts  koreana.ts  latam.ts  norwegian.ts  polish.ts  portuguese.ts  romanian.ts  russian.ts  schinese.ts  spanish.ts  swedish.ts  tchinese.ts  thai.ts  turkish.ts  ukrainian.ts  vietnamese.ts
ZQml/qml/: AutoResizingComboBox.qml  ChatsWindow.qml  CommunityView.qml  DownloadsItem.qml  DownloadsView.qml  FriendItem.qml  FriendsWindow.qml  GameAchievement.qml  GameAchievements.qml  GameBF3.qml  GameBF3Server.qml  GameBF4.qml  GameBF4Keeper.qml  GameBF4Server.qml  GameBFHL.qml  GameContent.qml  GameContentAdd.qml  GameDescr.qml  GameInfo.qml  GameNews.qml  GameSims4.qml  GameView.qml  GamesView.qml  InviteWindow.qml  LibraryView.qml  LibraryViewAdd.qml  LibraryViewDetails.qml  LibraryViewMain.qml  LogView.qml  NewsItem.qml  NewsView.qml  SettingsView.qml  SteamDumperView.qml  TopBar.qml  TrayMenu.qml  Views.qml  main.qml
